--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Currency Convertor App</title>
 
+    <!-- font awesome cdn link  -->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!-- link css  -->
 
     <link rel="stylesheet" href="style.css">
@@ -24,24 +28,17 @@
                     <div class="select-container">
                         <img src="https://flagsapi.com/US/flat/64.png">
                         <select name="from">
-                            <option value="USD">USD</option>
-                            <option value="INR">INR</option>
-                            <option value="EUR">EUR</option>
-                            <option value="PKR">PKR</option>
-                            <option value="AUD">AUD</option>
+                       
                         </select>
                     </div>
                 </div>
+                <i class="fa-solid fa-arrow-right-arrow-left"></i>
                 <div class="to">
                     <p>To</p>
                     <div class="select-container">
                     <img src="https://flagsapi.com/PK/flat/64.png">
-                    <select name="from">
-                        <option value="USD">USD</option>
-                        <option value="INR">INR</option>
-                        <option value="EUR">EUR</option>
-                        <option value="PKR" selected>PKR</option>
-                        <option value="AUD">AUD</option>
+                    <select name="to">
+                    
                     </select>
                 </div>
             </div>
